# lightspeed-python-automated

./: .env.backup  .gitignore  IMPLEMENTATION_SUMMARY.md  MANUFACTURER_SKU_GUIDE.md  OAUTH_TESTING_GUIDE.md  QUICK_START.md  README.md  README_API.md  TESTING_GUIDE.md  env.example  example_manufacturer_skus.csv  lightspeed-login.cmd  lightspeed-task.cmd  pyproject.toml  requirements.txt  setup.cmd  sheet_to_lightspeed.py  test_manufacturer_sku.py  test_products.csv
lightspeed_oauth/: __init__.py  auth.py  cli.py  http.py  models.py  storage.py
lightspeed_sync/: __init__.py  cli.py  config.py  csv_io.py  matchers.py  reporting.py
lightspeed_sync/auth/: __init__.py  base.py  ecom.py  retail.py
lightspeed_sync/clients/: __init__.py  base.py  ecom.py  retail.py
lightspeed_sync/updaters/: __init__.py  ecom_descriptions.py  ecom_images.py  retail_custom_fields.py  retail_weight.py
