[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightspeed-oauth"
version = "0.1.0"
description = "OAuth helper and CLI for Lightspeed Retail API"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi>=0.100.0",
    "cryptography>=41.0.0",
]

[project.scripts]
lsr-auth = "lightspeed_oauth.cli:app"

[tool.setuptools.packages.find]
include = ["lightspeed_oauth*"]

[project.urls]
Homepage = "https://github.com/yourusername/lightspeed-oauth"
Repository = "https://github.com/yourusername/lightspeed-oauth"